data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_809.wast
;; 10. **Test Reinitialization Side Effects**:     - Set up a `loop` with side-effect-inducing instructions that should reset upon branching but fail to do so, affecting subsequent iterations.     - **Constraint**: Correct reinitialization of loops.     - **CFG Impact**: Failing to reset can generate CFG paths with inherited side effects, leading to incorrect or inconsistent behavior.

(assert_invalid
  (module
    (func $test (result i32)
      (i32.const 0)
      (loop (param i32) (result i32)
        (i32.const 1) 
        (i32.add) 
        (br_if 0 (i32.const 0))
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)